--- a/areas/sud_frontend/src/workspaces/UserWorkspaces.css
+++ b/areas/sud_frontend/src/workspaces/UserWorkspaces.css
@@ -218,38 +218,49 @@
     margin: 0 0 20px 10px;
 }
 
+.access-action-user-buttons {
+    display: flex;
+    flex-direction: column;
+}
+
 .workspace-archive-button-close:hover {
     background-color: #575757;
 }
 
+.access-action-buttons {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
 .access-action-button {
     padding: 10px 20px;
-    width: fit-content;
+    width: 100%;
     align-self: center;
     border-radius: 30px;
     border: none;
-    font-size: large;
-    background-color: #a44ee0;
+    font-size: medium;
+    background-color: #0071ea;
     color: white;
     cursor: pointer;
-    margin: 0 0 20px 10px;
+    margin: 0 10px 10px 10px;
 }
 
 .access-action-button:hover {
-    background-color: #9d48d9;
+    background-color: #005fc7;
 }
 
 .remove-action-button {
     padding: 10px 20px;
-    width: fit-content;
+    width: 100%;
     align-self: center;
     border-radius: 30px;
     border: none;
-    font-size: large;
+    font-size: medium;
     background-color: #f65858;
     color: white;
     cursor: pointer;
-    margin: 0 0 20px 10px;
+    margin: 0 10px 10px 10px;
 }
 
 .remove-action-button:hover {
@@ -411,5 +422,9 @@
 
 .workspace-title {
     margin-bottom: 20px;
+}
+
+.set-up-accesses-title {
+    margin-bottom: 0;
 }
 
