--- a/areas/sud_frontend/src/login/LoginForm.css
+++ b/areas/sud_frontend/src/login/LoginForm.css
@@ -14,6 +14,11 @@
     flex-direction: column;
 }
 
+.error-message {
+    color: red;
+    font-size: medium;
+}
+
 .login-form {
     display: flex;
     width: 20%;
