--- a/areas/sud_frontend/src/branch/Branch.css
+++ b/areas/sud_frontend/src/branch/Branch.css
@@ -12,6 +12,34 @@
     margin-bottom: 20px;
 }
 
+/* Full-Screen Loader CSS */
+.loader-cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 9999;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader {
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 5px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 .document-action-block {
     background: white;
     padding: 20px 20px 10px 20px;
