Mega pack of UI Fixes

--- a/areas/sud_frontend/src/workspaces/UserWorkspaces.css
+++ b/areas/sud_frontend/src/workspaces/UserWorkspaces.css
@@ -198,6 +198,14 @@
     cursor: pointer;
 }
 
+input#readonly {
+    margin-bottom: 20px;
+}
+
+label.readonly {
+    margin-right: 10px;
+}
+
 .workspace-access:hover {
     background-color: #343434;
 }
